[project]
name = "zakat"
version = "0.2.61"
authors = [
  { name="Abdelaziz Elrashed Elshaikh Mohamed", email="aeemh.sdn@gmail.com" },
]
description = "A Python Library for Islamic Financial Management."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vzool/zakat"
Issues = "https://github.com/vzool/zakat/issues"