[project]
name = 'zakat'
version = '0.2.87'
authors = [
  { name='Abdelaziz Elrashed Elshaikh Mohamed', email='aeemh.sdn@gmail.com' },
]
description = 'A Python Library for Islamic Financial Management.'
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
]
dependencies=[
  'camelx',
]

[project.urls]
Homepage = 'https://github.com/vzool/zakat'
Issues = 'https://github.com/vzool/zakat/issues'