[project]
name = 'zakat'
dynamic = [
  'version',
]
authors = [
  { name='Abdelaziz Elrashed Elshaikh Mohamed', email='aeemh.sdn@gmail.com' },
]
description = 'A Python Library for Islamic Financial Management.'
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
]
dependencies=[
]

[project.urls]
Homepage = 'https://github.com/vzool/zakat'
Documentation = 'https://vzool.github.io/zakat/'
Issues = 'https://github.com/vzool/zakat/issues'

[tool.setuptools.dynamic]
version = {attr = "zakat.__version__"}
